# docs/swagger.json
@@ -19,18 +19,13 @@
                 "summary": "Create User",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "username ",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "role ",
-                        "name": "role",
-                        "in": "query",
-                        "required": true
+                        "description": "Object",
+                        "name": "Object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
                     }
                 ],
                 "responses": {
@@ -113,19 +108,7 @@
         "model.User": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
                 "role": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 },
                 "username": {
@@ -140,10 +123,7 @@
                     "type": "integer",
                     "example": 400
                 },
-                "message": {
-                    "type": "string",
-                    "example": "status bad request"
-                }
+                "message": {}
             }
         }
     }
